--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,11 @@
         </activity>
 
         <activity
+            android:name=".ui.newssources.NewsSourceActivity"
+            android:exported="true">
+        </activity>
+
+        <activity
             android:name=".ui.MainActivity"
             android:exported="true">
             <intent-filter>
