If applied, this commit will add the functionality for newsByLanguages

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,11 +20,16 @@
         <activity
             android:name=".ui.countries.CountriesPageActivity"
             android:exported="true">
-            <!--            <intent-filter>-->
-            <!--                <action android:name="android.intent.action.MAIN" />-->
+        </activity>
 
-            <!--                <category android:name="android.intent.category.LAUNCHER" />-->
-            <!--            </intent-filter>-->
+        <activity
+            android:name=".ui.languages.LanguagesActivity"
+            android:exported="true">
+        </activity>
+
+        <activity
+            android:name=".ui.newsbylanguage.NewsByLanguageActivity"
+            android:exported="true">
         </activity>
 
         <activity
