--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,11 @@
         </activity>
 
         <activity
+            android:name=".ui.instantsearch.InstantSearchActivity"
+            android:exported="true">
+        </activity>
+
+        <activity
             android:name=".ui.newsbycountry.NewsByCountryActivity"
             android:exported="true">
             <!--            <intent-filter>-->
